@@ -3,6 +3,8 @@
 ====================== 0.9.24.2 ====================
  * Restore joystick/controller functionality
  * Fix crash when starting game with 2 controllers or more
+ * Fix insane amount of droplets appearing when shooting minigun into ocean world edge
+ * Limit number of droplets to 50 (temporary bugfix)
  + Add default controls for controllers (see README)
 
 ====================== 0.9.24.1 ====================
